--- a/components/backend-tests-go-mvkdxmdz/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-mvkdxmdz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-mvkdxmdz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-mvkdxmdz:0c645f0a8fc17cc8830c7b274c44d6ebaa1ffc1f@sha256:8ea347995dc9ad02cdf23c6d948b77796d2d507539dcc3b3ed17a52e3667b8c5
+          name: container-image
